tests/snapshot/error/source_locations/expression/update/set_property.exp
Error: 
  ┌ source_locations/expression/update/set_property.js:6:11
  |
6 |     throw new Error();
  |           ^
Stack trace:
  at set foo (source_locations/expression/update/set_property.js:6:11)
  at <global> (source_locations/expression/update/set_property.js:10:4)